[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]
